<resources>
    <string name="app_name">JogosApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="senha">Password</string>
    <string name="email">Email</string>
    <string name="boxlogin">Remember</string>
    <string name="create_account">Create account</string>
    <string name="login_button">LOG IN</string>
    <string name="name">Name</string>
    <string name="senha_repetir">Repeate password</string>
    <string name="cadastro_button">CREATE ACCOUNT</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="searchview">Search Game</string>
    <string name="created">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">SAVE GAME</string>
</resources>