<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/white"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textColor="@color/design_default_color_secondary_variant"
                android:hint="@string/email"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:theme="@style/TextInputStyle"
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/senha"
                android:textColor="@color/design_default_color_secondary_variant"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="left"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/boxlogin"
            android:textSize="18dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_button"
            android:textSize="18dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_style"/>

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_account"
            android:textSize="20dp"
            android:textColor="@color/design_default_color_secondary_variant"/>

    </LinearLayout>

</FrameLayout>