<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_firebase"
    android:gravity="center"
    tools:context=".ui.CadastroGameActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/name"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_nome_game"
                    android:layout_width="match_parent"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:layout_height="60dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/created"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_year_game"
                    android:layout_width="match_parent"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:layout_height="60dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/description"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_description_game"
                    android:layout_width="match_parent"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:layout_height="120dp" />

                <Button
                    android:id="@+id/button_save_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/save_game" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_add_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/red"
            app:cardCornerRadius="360dp">

            <ImageView
                android:id="@+id/iv_img_camera"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/ic_camera" />

            <ImageView
                android:id="@+id/iv_ic_camera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</LinearLayout>